.provarCaches/00D5f000005vwGkEAI/objects/rootstock__Custom_UI_Rule__c.object
<CustomObject>
    <fields>
        <fullName>rootstock__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check to make the UI rule active.</description>
        <inlineHelpText>Check to make the UI rule active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rootstock__Allow_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the user is allowed to override the action field values.</description>
        <inlineHelpText>If checked, the user is allowed to override the action field values.</inlineHelpText>
        <label>Allow Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rootstock__Criteria__c</fullName>
        <description>The criteria which qualifies the record to apply the rule.</description>
        <inlineHelpText>The criteria which qualifies the record to apply the rule.</inlineHelpText>
        <label>Criteria</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rootstock__Description__c</fullName>
        <description>The description of the criteria or purpose of the rule.</description>
        <inlineHelpText>The description of the criteria or purpose of the rule.</inlineHelpText>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rootstock__Grid_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this is a rule used for Rootstock Grid. If unchecked, this is a rule used for Record Edit component in Lightning Record Page.</description>
        <inlineHelpText>If checked, this is a rule used for Rootstock Grid. If unchecked, this is a rule used for Record Edit component in Lightning Record Page.</inlineHelpText>
        <label>Grid Rule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rootstock__Object_Type__c</fullName>
        <description>The target object for the rule.</description>
        <inlineHelpText>The target object for the rule.</inlineHelpText>
        <label>Object Type</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootstock__Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Reserved for future.</description>
        <inlineHelpText>Reserved for future.</inlineHelpText>
        <label>Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rootstock__Unique_Key__c</fullName>
        <description>The unique key to identify the rule.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique key to identify the rule.</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rootstock__Version__c</fullName>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Custom UI Rule</label>
    <listViews>
        <fullName>rootstock__All</fullName>
        <columns>NAME</columns>
        <columns>rootstock__Unique_Key__c</columns>
        <columns>rootstock__Object_Type__c</columns>
        <columns>rootstock__Criteria__c</columns>
        <columns>rootstock__Active__c</columns>
        <columns>rootstock__Allow_Override__c</columns>
        <columns>rootstock__Description__c</columns>
        <columns>rootstock__Grid_Rule__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rootstock__Grid_Rules</fullName>
        <columns>NAME</columns>
        <columns>rootstock__Unique_Key__c</columns>
        <columns>rootstock__Object_Type__c</columns>
        <columns>rootstock__Criteria__c</columns>
        <columns>rootstock__Active__c</columns>
        <columns>rootstock__Allow_Override__c</columns>
        <columns>rootstock__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rootstock__Grid_Rule__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Grid Rules</label>
    </listViews>
    <nameField>
        <label>UI Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom UI Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rootstock__Rule_cannot_be_overridden</fullName>
        <active>true</active>
        <description>Checks if the user is allowed to override the rule&apos;s field values.</description>
        <errorConditionFormula>IF(rootstock__Allow_Override__c, false, NOT(rootstock__Active__c))</errorConditionFormula>
        <errorMessage>Rule cannot be overridden</errorMessage>
    </validationRules>
</CustomObject>